--- a/Treemap Diagram.html
+++ b/Treemap Diagram.html
@@ -14,7 +14,7 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__link">
-          <a href="Bar Chart.html">Bar Chart</a>
+          <a href="index.html">Bar Chart</a>
         </li>
         <li class="nav__link">
           <a href="Scatterplot Graph.html">Scatterplot Graph</a>
