--- a/index.html
+++ b/index.html
@@ -6,18 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/Bar Chart.css" />
+
+    <script src="https://d3js.org/d3.v7.min.js"></script>
   </head>
   <body>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__link">
           <a href="Bar Chart.html">Bar Chart</a>
         </li>
-        <li class="nav__link">Scatterplot Graph</li>
-        <li class="nav__link">Heat Map</li>
-        <li class="nav__link">Choropleth Map</li>
-        <li class="nav__link">Treemap Diagram</li>
+        <li class="nav__link">
+          <a href="Scatterplot Graph.html">Scatterplot Graph</a>
+        </li>
+        <li class="nav__link"><a href="Heat Map.html">Heat Map</a></li>
+        <li class="nav__link">
+          <a href="Choropleth Map.html">Choropleth Map</a>
+        </li>
+        <li class="nav__link">
+          <a href="Treemap Diagram.html">Treemap Diagram</a>
+        </li>
       </ul>
     </nav>
+    <div class="main">
+      <div class="title-container">
+        <h1 class="title" id="title">Bar Graph</h1>
+      </div>
+      <div class="visData"></div>
+    </div>
+    <script src="js/Bar Chart.js"></script>
   </body>
 </html>
